--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Don't know what to eat? We got you!</p>
           </div>
     </header>
-
+<!-- checking it -->
     <!-- First slot machine for food choices -->
         <div id="app">
             <div class="doors">
