--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <button id="reseter">Reset</button>
         </div>
       </div>
-
+<script src="./assets/script.js"></script>
       <footer>
         <p>Made by Dakota, Kevin, & John</p>
         <p><a href="mailto:hege@example.com">hege@example.com</a></p>
