added bulma css framework to project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Food Picker 3000</title>
 </head>
@@ -37,7 +38,7 @@
             </div>
           
             <div class="buttons">
-              <button id="spinner">Spin</button>
+              <button style="margin: 5px;" id="spinner">Spin</button>
               <button id="reseter">Reset</button>
             </div>
           </div>
@@ -65,7 +66,7 @@
         </div>
       
         <div class="buttons">
-          <button id="spinner">Spin</button>
+          <button style="margin: 5px;" id="spinner">Spin</button>
           <button id="reseter">Reset</button>
         </div>
       </div>
