--- a/index.html
+++ b/index.html
@@ -70,10 +70,35 @@
           <button id="reseter">Reset</button>
         </div>
       </div>
-<script src="./assets/script.js"></script>
       <footer>
         <p>Made by Dakota, Kevin, & John</p>
         <p><a href="mailto:hege@example.com">hege@example.com</a></p>
       </footer>
+
+      <!-- THIS IS STRICTLY FOR BULMA CSS MODAL -->
+      <div class="modal is-active">
+
+        <div class="modal-background"></div>
+        
+        
+        <!-- content -->
+        <div class="modal-content">
+          <div class="box">
+            <p class="title mb-6"> How to use: <br>
+              <h3 class="content is-medium">
+              1. Click 'Spin' to generate a recommendation <br>
+              2. Click 'Spin' on second slot machine to generate Movie recommendation <br>
+              3. Click 'Reset' to generate new recommendation. Maybe the stars weren't aligned? </h3>
+            </p>
+          </div>
+        </div>
+
+        <button class="modal-content" data-target="modal-js-example">
+          Okay, Let's Eat!
+        </button>
+
+        </div>
+        </div>
+        <script src="./assets/script.js"></script>
 </body>
 </html>
