finished adding modal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </div>
     </header>
 
-    <!-- First slot machine for food choices -->
+    <!-- first slot machine for food choices -->
         <div id="app">
             <div class="doors">
               <div class="door">
