--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
       <!-- THIS IS STRICTLY FOR BULMA CSS MODAL -->
       <!-- TODO: We want to remove 'is-active' upon clicking btn on modal -->
       <div class="modal is-active">
-
         <div class="modal-background"></div>
-        
         <!-- Modal content -->
         <div class="modal-content">
           <div class="box">
@@ -96,12 +94,8 @@
             </p>
           </div>
         </div>
-
-        <button class="modal-content" id="modalbutton">
-          Okay, Let's Eat!
-        </button>
+          <button class="modal-content" id="signup">Okay, Let's Eat!</button>
       </div>
-    </div>
     <!-- End of Modal section -->
         <script src="./assets/script.js"></script>
 </body>
