edited modal text

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <p class="title mb-6"> How to use: <br>
               <h3 class="content is-medium">
               1. Click 'Spin' to generate a food recommendation <br>
-              2. Click 'Spin' on second slot machine to generate Movie recommendation <br>
-              3. Click 'Reset' to generate new recommendation. Maybe the stars weren't aligned? </h3>
+              <!-- 2. Click 'Spin' on second slot machine to generate Movie recommendation <br> -->
+              2. Click 'Reset' to generate new recommendation. Maybe the stars weren't aligned? </h3>
             </p>
           </div>
         </div>
